2008-06-16: Marius Mauch <genone@gentoo.org>
	* euse: Add support for multi-parent profiles, account for missing 
	final newline in make.conf

2008-03-19: Paul Varner <fuzzyray@gentoo.org>
	* glsa-check: Fix imports so mail functionality in glsa-check works
	with python versions less than 2.5 (Bug 211706)

2008-03-13: Paul Varner <fuzzyray@gentoo.org>
	* euse: Add --info-installed option from patch provided by Andreas
	Waidler. (Bug 212573)

2008-03-13: Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix trying to emerge an empty list of packages. (Bug
	213294)

2008-02-28: Paul Varner <fuzzyray@gentoo.org>
	* gentoolkit: Fix traceback when accessing the portage
	db. (Bug #211716)

2008-02-21: Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: "Use /etc/init.d/functions.sh instead of
	/sbin/functions.sh. (Bug 210940)

2008-02-18: Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Apply patch to allow combined short options.
	(Bug 188343)
	* revdep-rebuild: Don't duplicate broken file output. (Bug 201319)
	* revdep-rebuild: unset GREP_OPTIONS to prevent problems with grep.
	(Bug 189257)
	* revdep-rebuild: Apply patch to prevent false matches of object names.
	(Bug 196460)
	* revdep-rebuild: Apply patch to better handle masked and removed
	packages. (Bug 205227)
	* revdep-rebuild: Filter SEARCH_DIRS_MASK paths from SEARCH_DIRS.
	(Bug 194993)
	* revdep-rebuild: Apply patch for revdep-rebuild portable find function.
	(Bug 194234)
	* equery: Fix equery list to not generate an internal portage error when
	fed input with too many slashes. (Bug 119806)
	* equery: Assume the -p flag when equery list -I is used by itself.
	(Bug 106278)


2007-10-09: Marius Mauch <genone@gentoo.org>
	* glsa-check: Change "affected" target so it's based on "new" instead of 
	"all" (IOW: exclude already applied/injected GLSAs).

2007-10-05: Marius Mauch <genone@gentoo.org>
	* glsa-check: Use UTF-8 strings to avoid EncodeErrors if a GLSA contains
	non-ascii characters (bug #162493)
